# KiteTutorial

./: CMakeLists.txt
Engine/include/: Kite.h
Engine/src/: Application.cpp  Application.h  Core.h  EntryPoint.h  Kite.h  Log.cpp  Log.h  ktpch.h  main.cpp
Engine/src/Events/: Event.cpp  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Sandbox/: CMakeLists.txt
Sandbox/src/: SandboxApp.cpp  main.cpp
